# mondiali-2026

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
reports/: backtest_wc2022_euro2024.md  dl_levels_comparison.md  elo_baseline_72.md  talent_diagnostic.json  validation_step1.md  validation_step2.md  validation_step3.md  validation_step4.md  validation_step5.md  validation_step6.md  validation_step7.md  validation_step8.md  validation_step9.md  wc2026_groups_predictions.csv  wc2026_groups_simulation.md  wc2026_knockout_simulation.md  wc2026_live_scoring.md  wc2026_per_team.csv  wc2026_scored_matches.csv  wc2026_tournament_simulation.md
scripts/: backtest_tournaments.py  compare_dl_levels.py  consolidate_wc2026_per_team.py  daily_match_preview.py  daily_workflow.py  diagnose_talent_lever.py  diagnose_tier1.py  eval_elo_baseline.py  eval_ensemble.py  eval_multi_seed.py  eval_oos_2025_2026.py  eval_time_decay.py  log_match_result.py  predict_wc2026_bracket.py  predict_wc2026_conditional.py  predict_wc2026_full.py  predict_wc2026_groups.py  predict_wc2026_knockout.py  score_wc2026_predictions.py  train_talent_challenger.py
tests/: test_baseline_prior.py  test_bracket.py  test_calibration.py  test_config.py  test_dixon_coles.py  test_dl_poisson.py  test_elo.py  test_elo_baseline.py  test_elo_logistic.py  test_evaluate.py  test_features_tier1.py  test_features_tier3.py  test_freeze.py  test_inference_state.py  test_ingestion.py  test_injuries_bootstrap.py  test_leakage.py  test_live_scoring.py  test_markets.py  test_monte_carlo.py  test_nation_resolver.py  test_poisson_xgb.py  test_predict.py  test_scope.py  test_splits.py  test_talent_features.py  (+12 more)
(+73 files in other folders)
